# kb-copilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.server.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: chat.py  documents.py  kb_chat.py
app/core/: config.py  db.py  db_sync.py  embeddings.py  llm.py  middleware.py  rerank.py  tokens.py
app/models/: chat.py  ingest.py
app/services/: chat_service.py  chunking.py  context.py  parsing.py  retrieval.py  vector_store.py
app/tasks/: celery_app.py  ingest.py
data/: evalset.jsonl
docs/: devlog.md  eval-report.md
docs/adr/: 001-handwritten-rag-chain.md  002-sse-over-websocket.md  003-celery-over-backgroundtasks.md  README.md
results/: summary.json
scripts/: build_evalset.py  chat_smoke.py  kb_eval.py  run_eval.py  run_ragas.py
static/: index.html
tests/: test_chunking.py  test_context.py
