[project]
name = "kb-copilot"
version = "0.1.0"
description = "企业级知识库问答平台：FastAPI + 自研 RAG 链路 + 两阶段检索 + Ragas 评测闭环"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sse-starlette>=2.1",
    "openai>=1.40",          # DeepSeek 兼容 OpenAI SDK
    "tiktoken>=0.7",
    "sqlalchemy>=2.0",
    "aiomysql>=0.2",
    "pymysql>=1.1",        # Celery worker 侧走同步 SQLAlchemy
    "cryptography>=42.0",  # MySQL 8 caching_sha2_password 认证需要
    "celery>=5.4",
    "redis>=5.0",
    "pymilvus>=2.4",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",  # FastAPI 文件上传
]

[project.optional-dependencies]
eval = [
    "ragas>=0.4,<0.5",
    "langchain-openai>=0.2",
    "langchain-community>=0.3,<0.4",  # ragas 0.4 仍 import vertexai 等旧模块，0.4.x 已移除
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
